# CDPFAS_HG_Analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/instructions/: instructions.md
cd_host_guest/: __init__.py  config.py  dataset.py  features.py  plots.py
cd_host_guest/modeling/: predict.py  train.py
data/: README.md
notebooks/: ChemBERTa_gen.ipynb  ECFPplus_gen.ipynb  GROVER_gen.ipynb  UniMol_gen.ipynb  dataset_overlap_analysis.ipynb
reports/: README.md
