[project]
name = "cd_host_guest"
version = "0.0.1"
description = "First phase of SYROP project aiming to predict the binding energy between cyclodextrins and relevant organic compounds, including PFAS, in a host-guest complex."
authors = [
  { name = "Cole Brzakala" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
    "deepsmiles>=1.0.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "rdkit>=2024.3.6",
    "selfies>=2.1.2",
    "torch-geometric>=2.6.1",
    "typing>=3.10.0.0",
    "networkx>=3.4.2",
    "matplotlib>=3.9.2",
    "lightgbm>=4.5.0",
    "scikit-learn>=1.5.2",
    "wandb>=0.18.7",
    "typer>=0.13.1",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "ipykernel>=6.29.5",
    "pip>=24.3.1",
    "scienceplots>=2.1.1",
    "lightning>=2.5.0.post0",
    "chemprop>=2.0.2",
    "seaborn>=0.13.2",
    "transformers>=4.49.0",
    "shap>=0.47.0",
    "joblib>=1.4.2",
    "ersilia>=0.1.27",
    "resource>=0.2.1",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "dgllife>=0.3.2",
    "torch>=2.5.1",
    "tensorflow>=2.19.0",
    "deepchem>=2.8.0",
    "requests>=2.32.3",
    "umap-learn>=0.5.7",
    "unimol-tools>=0.1.5",
]

[tool.uv]
dev-dependencies = [
  "hatch>=1.13.0,<2",
  "pre-commit>=3.8.0,<4",
  "pytest>=8.3.3,<9",
  "pytest-cov>=5.0.0,<6",
  "mkdocstrings[python]>=0.26.1,<1",
  "mkdocs-material>=9.5.39,<10",
  "setuptools-scm>=8.1.0,<9",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[project.urls]
Homepage = "https://github.com/colebrzakala/cd_host_guest"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]

[tool.coverage]
run.source = ["cd_host_guest"]
port.exclude_lines = [
  'pragma: no cover',
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]



[tool.ruff]
src = ["src"]
exclude = []
line-length = 88  # how long you want lines to be, 88 is black's default

[tool.ruff.format]
docstring-code-format = true  # code snippets in docstrings will be formatted

[tool.ruff.lint]
# For more strict linting and code simplifications, replace this with
# https://github.com/NLeSC/python-template/blob/main/template/pyproject.toml.jinja#L121-L136
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  # "D",           # pydocstyle, uncomment to have the docstrings linted
  # "ANN",         # flake8-annotations, uncomment to have type hint annotations linted
]
ignore = [
  "PLR",    # Design related pylint codes
  "ISC001", # Conflicts with formatter
  "E501", # Line length too long
  "RET504",  # Unnecessary assignment before return
  "RUF013",  # Prohibits optional arguments
  "B008",    # Prohibits Typer objects as function arguments
  "EM101",   # Prohibits f string literal in error message directly
  "PLW2901", # Overwrite loop var in loop
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests can ignore a few extra rules
"tests/**.py" = [
    "ANN201", # Missing return type annotation for public function
    "D103",   # Missing docstring
    "S101",   # Use of assert is detected
    "INP001", # Missing __init__.py file
    "EM101",   # Prohibits f string literal in error message directly
    "PLW2901", # Overwrite loop var in loop
]

[tool.yamlfix]
line_length = 88
sequence_style = "keep_style"
explicit_start = false
whitelines = 1
section_whitelines = 1
